change campo string url images

--- a/app/views/admin/centros/edit.html.erb
+++ b/app/views/admin/centros/edit.html.erb
@@ -20,11 +20,11 @@
             </div>   
              <div class="form-group">
               <%= f.label :schedule, "Fecha del centro" %><br>
-              <%= f.text_field :schedule, placeholder: "Escribe la fecha del nuevo centro de intere", class: "form-control" %>
+              <%= f.text_field :schedule, placeholder: "Escribe la fecha del nuevo centro de interes", class: "form-control" %>
             </div>
             <div class="form-group">
               <%= f.label :img, "Direccion de la imagen" %><br>
-              <%= f.file_field :img  %>
+              <%= f.text_field :img, placeholder: "Escribe la url de la imagen", class: "form-control" %>
             </div>
 
             <div>
