--- a/app/views/admin/images/show.html.erb
+++ b/app/views/admin/images/show.html.erb
@@ -1,2 +1,2 @@
-<%= image_tag image.picture.medium.url, class: "figure-img img-fluid- rounded"  %>
+<%= image_tag image.picture, class: "figure-img img-fluid rounded"  %>
 <%= @image.description %>
