--- a/app/views/home/_centerInteresting.html.erb
+++ b/app/views/home/_centerInteresting.html.erb
@@ -26,7 +26,7 @@
                   <i class="fas fa-plus fa-3x"></i>
                 </div>
               </div>
-              <%= image_tag centro.img.medium.url, class: "figure-img img-fluid rounded"  %>
+              <%= image_tag centro.img, class: "figure-img img-fluid rounded"  %>
             </div>
           </div>
         
@@ -53,7 +53,7 @@
                           </div>
                           <div class="divider-custom-line"></div>
                         </div>
-                        <%= image_tag centro.img.medium.url, class: "figure-img img-fluid rounded"  %>
+                        <%= image_tag centro.img, class: "figure-img img-fluid rounded"  %>
                         <!-- Portfolio Modal - Text -->
                         <p class="mb-5"><p><%= centro.description %>.</p>
                         <button class="btn btn-primary" href="#" data-dismiss="modal">
