--- a/app/views/admin/events/edit.html.erb
+++ b/app/views/admin/events/edit.html.erb
@@ -30,7 +30,7 @@
             </div>
             <div class="form-group">
               <%= f.label :img, "Direccion de la imagen" %><br>
-              <%= f.file_field :img  %>
+              <%= f.text_area :img, placeholder: "Escriba la url de la imagen", class: "form-control" %>
             </div>
 
             <div>
