--- a/app/views/admin/events/index.html.erb
+++ b/app/views/admin/events/index.html.erb
@@ -7,9 +7,13 @@
   <br>
     <div class="row">
       <% @events.each do |evento| %>
-        <div class="col-md-4 ">
+        <div class="col-md-4 mt-3">
           <div class="card h-100 hvr-shadow">
-            <%= image_tag evento.img.medium.url, class: "figure-img img-fluid- rounded"  %>
+             <% if evento.img %>
+              <%= image_tag (evento.img),class: "figure-img img-fluid rounded" %>
+            <%else%>
+              <img src="https://dnw5ax76vq1gg.cloudfront.net/default.jpg" class="figure-img img-fluid rounded" alt="">
+            <% end %>
           <div class="card-body">
             <h4 class="card-title">
               <a href="#"><%= evento.title %></a>
