--- a/app/views/admin/images/_image.html.erb
+++ b/app/views/admin/images/_image.html.erb
@@ -1,9 +1,9 @@
 <div class="col-md-4">
 	<figure class="figure">
-		<%= image_tag image.picture.thumb.url, class: "figure-img img-fluid- rounded"  %>
+		<%= image_tag image.picture, class: "figure-img img-fluid rounded"  %>
 	</figure>
-	<figcaption class="figure-caption"><%= image.description %>
-		<%= link_to 'Editar', edit_admin_image_path(image) %>
-		<%= link_to 'Eliminar', admin_image_path(image), method: :delete, data: { confirm: "Seguro que quieres eliminar la imagen?"} %>		
+	<figcaption class="figure-caption"><%= image.description %> <br>
+		<%= link_to 'Editar', edit_admin_image_path(image), class: "btn btn-warning" %>
+		<%= link_to 'Eliminar', admin_image_path(image), method: :delete, data: { confirm: "Seguro que quieres eliminar la imagen?"}, class: "btn btn-danger" %>		
 	</figcaption>
 </div>
