--- a/app/views/events/_header-events.html.erb
+++ b/app/views/events/_header-events.html.erb
@@ -7,7 +7,11 @@
     <div class="row">
 
       <div class="col-md-8">
-        <%= image_tag @event.img.medium.url, class: "figure-img img-fluid rounded img-events"  %>
+        <% if @event.img %>
+          <%= image_tag @event.img, class: "figure-img img-fluid rounded img-events"  %>
+        <%else%>
+          <img src="https://dnw5ax76vq1gg.cloudfront.net/default.jpg" class="figure-img img-fluid rounded" alt="">
+        <% end %>
       </div>
 
       <div class="col-md-4">
