--- a/app/views/galleries/index.html.erb
+++ b/app/views/galleries/index.html.erb
@@ -1,7 +1,8 @@
-<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" style="position: relative;">
+  <div style="position: absolute; top: 0px; left:0px; width: 100%; height:100%; background-color: #0000007a; z-index: 10; "></div>
     <div class="carousel-inner" role="listbox">
       <!-- Slide One - Set the background image for this slide in the line below -->
-      <div class="carousel-item active" style="background-image: url('https://source.unsplash.com/RCAhiGJsUUE/1920x1080')">
+      <div class="carousel-item active" style="background-image: url('https://d2yoo3qu6vrk5d.cloudfront.net/pulzo-lite/images/CC7/ColegioGRP/dia+de+la+familia.jpeg');">
         <div class="carousel-caption d-none d-md-block">
           <h3 class="display-4 text-white">Galeria</h3>
           <p class="lead">Gustavo Rojas Pinilla</p>
@@ -18,7 +19,7 @@
     <% @images.each do |imagen| %>
       <div class="col-lg-3 col-md-4 col-6">
         <a href="#" class="d-block mb-4 h-100">
-          <%= image_tag imagen.picture.thumb.url, class: "figure-img img-fluid- rounded"  %>
+          <%= image_tag imagen.picture, class: "figure-img img-fluid rounded"  %>
         </a>
      </div>
     <% end %>
