--- a/app/views/admin/centros/new.html.erb
+++ b/app/views/admin/centros/new.html.erb
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col pt-5">
         <div class="container-form card p-5 hvr-shadow">
-          <h2>Crea un nuevo evento</h2>
+          <h2>Crea un nuevo Centro de interes</h2>
           <br>
           <%= form_for @CentroInteres, url: {action: "create"} do |f| %>
             <div class="form-group">
