--- a/app/views/home/_hero.html.erb
+++ b/app/views/home/_hero.html.erb
@@ -11,7 +11,9 @@
 	        </div>
 	        <div class="divider-custom-line"></div>
 	      </div>
-	      <p class="line-1 anim-typewriter ">"Formando líderes en tecnología con proyección ciudadana"</p>
+	      <div class="container-animate-slogan">
+	      	<p class="line-1 anim-typewriter ">"Formando líderes en tecnología con proyección ciudadana"</p>
+	      </div>
     	</div>
   	</div>
   </header>
