--- a/app/views/center_interesings/_hero.html.erb
+++ b/app/views/center_interesings/_hero.html.erb
@@ -9,7 +9,7 @@
       <!-- Slide One - Set the background image for this slide in the line below -->
       <div class="carousel-item active">
       	<div class="overlay">
-      		<div class="carousel-caption d-none d-md-block">
+      		<div class="carousel-caption">
 	          <h3 class="text-white display-4">Gastronomía</h3>
 	        </div>
       	</div>
@@ -17,7 +17,7 @@
       <!-- Slide Two - Set the background image for this slide in the line below -->
       <div class="carousel-item" >
       	<div class="overlay">
-      		<div class="carousel-caption d-none d-md-block">
+      		<div class="carousel-caption">
 	          <h3 class="display-4 text-white">Fútbol</h3>
         	</div>
       	</div>
@@ -25,7 +25,7 @@
       <!-- Slide Three - Set the background image for this slide in the line below -->
       <div class="carousel-item">
       	<div class="overlay">
-      		<div class="carousel-caption d-none d-md-block">
+      		<div class="carousel-caption">
 	          <h3 class="display-4 text-white">Artística</h3>
 	        </div>
       	</div>        
