--- a/app/views/home/_centerInteresting.html.erb
+++ b/app/views/home/_centerInteresting.html.erb
@@ -26,7 +26,7 @@
                   <i class="fas fa-plus fa-3x"></i>
                 </div>
               </div>
-              <%= image_tag centro.img, class: "figure-img img-fluid rounded"  %>
+              <%= image_tag centro.img, class: "figure-img img-fluid rounded", style: "height: 232px;"  %>
             </div>
           </div>
         
