--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -41,8 +41,8 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
-          <h2>Contactenos</h2>
-          <p>En esta seccion encontrara datos de contactenos con nostros, tanto via telefonica, email y por direccion</p>
+          <h2>Contáctenos</h2>
+          <p>Contáctese con nosotros por via telefónica, email y por dirección</p>
            <ul>
            	<li>2463642 - 2891656</li>
            	<li>colegiogustavorojasp@hotmail.com</li>
